--- a/css/ground3D.css
+++ b/css/ground3D.css
@@ -1,6 +1,10 @@
+*{
+	margin:0px;}
+body,html,#target{
+	height:100%;}
 .ground3D,.ground3D .frame{
   width: 750px;
-  height: 415px;
+  height: 1334px;
   background-color: #c9ccd5;
   overflow: hidden;
   position: relative;
@@ -10,7 +14,7 @@
   perspective-origin: 50% 50%;
   position: relative;
   width: 100%;
-  height: 415px;
+  height: 1334px;
   float: left;
   transform-style: preserve-3d;
 }
